[project]
name = "kactus"
version = "0.1.0"
description = "Kactus monorepo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=7.0.0",
]

[tool.uv.workspace]
members = ["packages/*"]
exclude = ["packages/docker-hub"]

[tool.uv.sources]
kactus-common = { workspace = true }
kactus-data = { workspace = true }
kactus-fin = { workspace = true }
kactus-fin-gateway = { workspace = true }

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
]
