[project]
name = "kactus"
version = "0.1.0"
description = "Kactus monorepo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kactus-common",
    "kactus-data",
    "kactus-fin",
    "kactus-fin-gateway",
]

[tool.uv.workspace]
members = ["packages/*"]
exclude = ["packages/docker-hub"]

[tool.uv.sources]
kactus-common = { workspace = true }
kactus-data = { workspace = true }
kactus-fin = { workspace = true }
kactus-fin-gateway = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
]
